# cautis

./: .env.example  .gitignore  DESIGN.md  README.md  memory.md  package-lock.json  package.json
contract/: Cargo.toml  Odra.toml  build.rs
contract/.cargo/: config.toml
contract/src/: flipper.rs  guardian.rs  lib.rs  minimal.rs  revert_test.rs
contract/wasm/: CautisGuardian.wasm
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.html  CLAUDE_PROMPT.md  PRD.md  TASKS.md
public/: architecture.html
src/: instrumentation.ts
src/app/api/agents/: route.ts
src/app/api/agents/[id]/: route.ts
src/app/api/agents/[id]/freeze/: route.ts
src/app/api/alerts/: route.ts
src/app/api/alerts/[id]/: route.ts
src/app/api/monitor/: route.ts
src/app/api/pay/: route.ts
src/lib/: casper.ts  guardian.ts  seed.ts  store.ts
