[package]
name = "cautis-guardian"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
odra = "2.8.1"
casper-types = "2"

[dev-dependencies]
odra-test = "2.8.1"

[build-dependencies]
odra-build = "2.8.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-test = "2.8.1"

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
